--- a/Index.html
+++ b/Index.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>L'Oréal Search Engine</title>
+    <title>DDX-Brain</title>
+     <link rel="icon" type="image/png" href="ruta/a/tu/icono-cerebro.png">
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
 </head>
@@ -28,4 +29,5 @@
 
     <script src="app.js"></script>
 </body>
+
 </html>
